HZN-344: Moved NewTS unit test helper to general available location